# FilmClass

./: CMakeLists.txt  FilmClass.sln
FilmClass/: Exception.cpp  Exception.h  Film.cpp  Film.h  FilmClass.vcxproj  FilmClass.vcxproj.filters  Main.cpp  MyArray.cpp  MyArray.h  MyString.cpp  MyString.h  in.txt  out.txt
